--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ install:
 - mkdocs --version
 - pip install mkdocs-material
 script:
-- mkdocs gh-deploy --clean --remote-branch master --remote-name git@github.com:zhoukaisspu/zhoukaisspu.github.io.git --force
+- git push git@github.com:zhoukaisspu/zhoukaisspu.github.io.git master --force
