--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ install:
 - mkdocs --version
 - pip install mkdocs-material
 script:
-- ssh -i deploy-key git@github.com
+- git remote add githubio git@github.com:zhoukaisspu/zhoukaisspu.github.io.git
+- git push githubio master --force
