Add scoped static object

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,3 +24,5 @@ nav:
   - 'C++':
     - '核心特性':
       - '构造函数': C++/coreFeature/specialMemberFunction/constructor.md
+    - 'C++对象模型':
+      - '局部静态对象': C++/objectModel/scoped_static.md
