--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,3 +29,5 @@ nav:
     - 'C++标准库':
       - 'std::thread': C++/standardLibrary/multiThread/thread.md
       - 'std::thread::native_handle': C++/standardLibrary/multiThread/thread_nativeHandle.md
+    - 'C++技术总结':
+      - '单例模式': C++/others/singleTon_atomic_static_member.md
