Add navigator link to delegating_constructor

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
   - 'C++':
     - '核心特性':
       - '构造函数': C++/coreFeature/specialMemberFunction/constructor.md
+      - '委托构造': C++/coreFeature/specialMemberFunction/delegating_constructor.md
     - 'C++对象模型':
       - '局部静态对象': C++/objectModel/scoped_static.md
     - 'C++标准库':
