Add navigator to build.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
       - '单例模式': C++/others/singleTon_mutex_call_once.md
       - '单例模式_2': C++/others/singleTon_atomic_static_member.md
   - 'swift':
+    - 'Home: xcode的继续集成': swift/build.md
     - '1.1: 数据类型及变量': swift/basic.md
     - '1.2: 函数定义': swift/function.md
     - '2.1: 类基本': swift/class_basic.md
@@ -41,3 +42,4 @@ nav:
     - '2.3: 类方法': swift/class_method.md
     - '2.4: 类subscript': swift/class_subscript.md
     - '2.5: 类型转换': swift/type_casting.md
+  - 'shell'
