Add navigator to shell script

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,3 +43,5 @@ nav:
     - '2.4: 类subscript': swift/class_subscript.md
     - '2.5: 类型转换': swift/type_casting.md
   - 'shell'
+    - 'shell Script':
+      - 'shell script简介': shell/shellScript/home.md
