Fix mkdocs build error

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,6 @@ nav:
     - '2.3: 类方法': swift/class_method.md
     - '2.4: 类subscript': swift/class_subscript.md
     - '2.5: 类型转换': swift/type_casting.md
-  - 'shell'
+  - 'shell':
     - 'shell Script':
       - 'shell script简介': shell/shellScript/home.md
