--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,3 +45,4 @@ nav:
   - 'shell':
     - 'shell Script':
       - 'shell script简介': shell/shellScript/home.md
+      - '变量': shell/shellScript/variable.md
