Add shell_function.md in mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,3 +47,4 @@ nav:
       - 'shell script简介': shell/shellScript/home.md
       - '变量': shell/shellScript/variable.md
       - '条件判断': shell/shellScript/test.md
+      - '函数定义': shell/shellScript/shell_function.md
