Update name from "shell" to "linux"

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,7 @@ nav:
     - '2.3: 类方法': swift/class_method.md
     - '2.4: 类subscript': swift/class_subscript.md
     - '2.5: 类型转换': swift/type_casting.md
-  - 'shell':
+  - 'linux':
     - 'shell Script':
       - 'shell script简介': shell/shellScript/home.md
       - '变量': shell/shellScript/variable.md
