Add navigator to debug.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,3 +52,4 @@ nav:
       - '变量': shell/shellScript/variable.md
       - '条件判断': shell/shellScript/test.md
       - '函数定义': shell/shellScript/shell_function.md
+      - '调试': shell/shellScript/debug.md
