--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
       - 'Linux指令': shell/linux/command.md
       - 'Linux工具': shell/linux/tools.md
       - 'ext2文件系统': shell/linux/filesystem.md
+      - 'FHS': shell/linux/fhs.md
     - 'shell Script':
       - 'shell script简介': shell/shellScript/home.md
       - '变量': shell/shellScript/variable.md
