Add navigator to "file_operator.md"

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,5 +55,6 @@ nav:
       - 'shell script简介': shell/shellScript/home.md
       - '变量': shell/shellScript/variable.md
       - '条件判断': shell/shellScript/test.md
+      - '文件测试': shell/shellScript/file_operator.md
       - '函数定义': shell/shellScript/shell_function.md
       - '调试': shell/shellScript/debug.md
