--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,6 +55,7 @@ nav:
       - 'shell script简介': shell/shellScript/home.md
       - '变量': shell/shellScript/variable.md
       - '条件判断': shell/shellScript/test.md
+      - 'shell替换': shell/shellScript/substitution.md
       - '文件测试': shell/shellScript/file_operator.md
       - '函数定义': shell/shellScript/shell_function.md
       - '调试': shell/shellScript/debug.md
