--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
     - '进入python世界': python/home.md
     - '定义函数': python/function_py.md
     - '函数参数': python/functionParameter_py.md
+    - '类之封装/继承': python/class_py.md
   - 'swift':
     - 'Home: xcode的继续集成': swift/build.md
     - '1.1: 数据类型及变量': swift/basic.md
