--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,5 +61,6 @@ nav:
       - 'shell替换': shell/shellScript/substitution.md
       - '文件测试': shell/shellScript/file_operator.md
       - '函数定义': shell/shellScript/shell_function.md
+      - '数组': shell/shellScript/shellscript_array.md
       - '重定向': shell/shellScript/redirection.md
       - '调试': shell/shellScript/debug.md
