--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,6 +38,7 @@ nav:
     - '定义函数': python/function_py.md
     - '函数参数': python/functionParameter_py.md
     - '类之封装/继承': python/class_py.md
+    - '定制类': python/customizationClass_py.md
   - 'swift':
     - 'Home: xcode的继续集成': swift/build.md
     - '1.1: 数据类型及变量': swift/basic.md
