--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ before_install:
 - git config --global user.name "Kai.Zhou"
 - git config --global user.email "zhoukaisspu@163.com"
 install:
-- pip install mkdocs
+- pip3 install mkdocs
 - mkdocs --version
-- pip install mkdocs-material
+- pip3 install mkdocs-material
 script:
 - cd ..
 - git clone git@github.com:zhoukaisspu/zhoukaisspu.github.io.git
