--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ nav:
       - '委托构造': C++/coreFeature/specialMemberFunction/delegating_constructor.md
       - '操作符重载':
         - '操作符重载_part.I': C++/coreFeature/specialMemberFunction/operatorOverload.md
-        - '操作符重载_part.II': C++/coreFeature/specialMemberFunction/operatorOverload2.
+        - '操作符重载_part.II': C++/coreFeature/specialMemberFunction/operatorOverload2.md
         - '操作符重载_part.III': C++/coreFeature/specialMemberFunction/operatorOverload3.md
       - '右值引用': C++/coreFeature/specialMemberFunction/rvalueReference.md
     - 'C++对象模型':
