--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,6 +84,7 @@ nav:
       - '常用代码片段': shell/shellScript/shCodeSnippet.md
     - 'git':
       - 'clone': shell/linux/tools/git/clone.md
+      - 'branch': shell/linux/tools/git/branch.md
   - '逆向工程':
     - '基础篇':
       - '逆向工程工具': reverseEngine/basicDevtool.md 
