--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,7 +52,7 @@ nav:
     - '可调用对象': python/callable_py.md
     - '进程管理':
       - 'subprocess': python/subprocess.md
-    - '代码片段':
+    - '标准库':
       - '获取版本号': python/codeSnippet/py_ver.md
       - '命令行参数解析': python/codeSnippet/argparse.md
   - 'swift':
