--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,11 +50,10 @@ nav:
     - '定制类': python/customizationClass_py.md
     - '类属性/实例属性': python/property_py.md
     - '可调用对象': python/callable_py.md
-    - '进程管理':
-      - 'subprocess': python/subprocess.md
     - '标准库':
       - '获取版本号': python/codeSnippet/py_ver.md
-      - '命令行参数解析': python/codeSnippet/argparse.md
+      - 'argparse': python/codeSnippet/argparse.md
+      - 'subprocess': python/subprocess.md
   - 'swift':
     - 'Home: xcode的继续集成': swift/build.md
     - '1.1: 数据类型及变量': swift/basic.md
