--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
       - '获取版本号': python/codeSnippet/py_ver.md
       - 'argparse': python/codeSnippet/argparse.md
       - 'subprocess': python/subprocess.md
+      - 'sys': python/library/sys.md
   - 'swift':
     - 'Home: xcode的继续集成': swift/build.md
     - '1.1: 数据类型及变量': swift/basic.md
