--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
     - '定制类': python/customizationClass_py.md
     - '类属性/实例属性': python/property_py.md
     - '可调用对象': python/callable_py.md
+    - '模块和包': python/module.md
     - '标准库':
       - '获取版本号': python/codeSnippet/py_ver.md
       - 'argparse': python/codeSnippet/argparse.md
