--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,6 +90,7 @@ nav:
       - 'clone': shell/linux/tools/git/clone.md
       - 'branch': shell/linux/tools/git/branch.md
       - 'config': shell/linux/tools/git/config.md
+      - 'tag': shell/linux/tools/git/tag.md
   - '逆向工程':
     - '基础篇':
       - '逆向工程工具': reverseEngine/basicDevtool.md 
