--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
     - '对象设计': JS/ObjectOriented.md
   - 'python':
     - '进入python世界': python/home.md
+    - 'cpython解释器': python/cpython.md
     - '定义函数': python/function_py.md
     - '函数参数': python/functionParameter_py.md
     - '全局变量的使用': python/globalVariable.md
