--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,7 @@ nav:
   - 'linux':
     - 'linux':
       - 'Linux指令': shell/linux/command.md
+      - '用户管理': shell/linux/user.md
       - 'Linux工具': shell/linux/tools.md
       - 'ext2文件系统': shell/linux/filesystem.md
       - '硬/符号链接': shell/linux/hard_softlink.md
