--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -98,7 +98,7 @@ nav:
     - '基础篇':
       - '逆向工程工具': reverseEngine/basicDevtool.md 
       - '汇编语言': reverseEngine/assembly.md
-  - '服务器':
+  - 'Web Server':
     - 'http':
       - '安全认证方式': http/httpAuthenticate.md
       - 'URL': http/url.md
