--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -55,6 +55,7 @@ nav:
     - '可调用对象': python/callable_py.md
     - '模块和包': python/module.md
     - 'SQLite': python/sqlite.md
+    - '文件操作': python/files.md
     - '标准库':
       - '获取版本号': python/codeSnippet/py_ver.md
       - 'argparse': python/codeSnippet/argparse.md
