--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -109,3 +109,6 @@ nav:
       - '安全认证方式': http/httpAuthenticate.md
       - 'URL': http/url.md
       - 'HTTP method': http/httpMethod.md
+  - 'Docker':
+    - '目录': docker/index.md  
+    
