--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -110,5 +110,6 @@ nav:
       - 'URL': http/url.md
       - 'HTTP method': http/httpMethod.md
   - 'Docker':
-    - '目录': docker/index.md  
+    - '目录': docker/index.md
+    - 'Dockerfile': docker/dockerfile.md
     
