--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,8 +74,9 @@ nav:
   - 'linux':
     - 'linux':
       - 'apt使用': shell/linux/apt.md
-      - 'Linux指令': shell/linux/command.md
       - '用户管理': shell/linux/user.md
+      - '网络接口': shell/linux/networkInterface.md
+      - 'Linux指令': shell/linux/command.md
       - 'sudo vs su': shell/linux/sudo.su.md
       - 'Linux工具': shell/linux/tools.md
       - 'ext2文件系统': shell/linux/filesystem.md
