--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,8 @@ nav:
       - '硬/符号链接': shell/linux/hard_softlink.md
       - 'FHS': shell/linux/fhs.md
       - 'C编译流程': shell/linux/c_compilation.md
+      - '实用工具':
+        - 'tmux': shell/linux/tools/tmux.md
     - 'shell Script':
       - 'shell script简介': shell/shellScript/home.md
       - '变量': shell/shellScript/variable.md
