--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,7 @@ nav:
       - '单例模式': C++/others/singleTon_mutex_call_once.md
       - '单例模式_2': C++/others/singleTon_atomic_static_member.md
   - 'javaScript':
+    - '进入JS世界': JS/README.md
     - '对象设计': JS/ObjectOriented.md
     - 'Events': JS/jsevent.md
   - 'python':
