--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 # Set title for project documentation
-site_name: Knowledge Sharing
+site_name: Kai.Zhou's 知识库
 
 # Set the name of author. This will add a meta data tag to the generated HTML header
 site_author: Kai.Zhou
