--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,9 @@ jobs:
           python-version: 3.7
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: |
+          pwd
+          ls
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
