--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,8 +32,15 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          pwd
-          ls
+          pip3 install mkdocs
+          mkdocs --version
+          pip3 install mkdocs-material
+          cd ..
+          git clone https://github.com/zhoukaisspu/zhoukaisspu.github.io.git
+          git config --global user.name "Kai.zhou"
+          git config --global user.email "zhoukaisspu@163.com"
+          cd zhoukaisspu.github.io
+          mkdocs gh-deploy --config-file ../ks_blog/mkdocs.yml --remote-branch master
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
