--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -40,6 +40,8 @@ jobs:
           git config --global user.name "Kai.zhou"
           git config --global user.email "zhoukaisspu@163.com"
           cd zhoukaisspu.github.io
+          git remote rm origin
+          git remote add origion https://zhoukaisspu@163.com:${{ secrets.DEPLOYTOKEN }}/github.com/zhoukaisspu/zhoukaisspu.github.io.git
           mkdocs gh-deploy --config-file ../ks_blog/mkdocs.yml --remote-branch master
 
       # Runs a set of commands using the runners shell
