--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,6 +89,7 @@ nav:
       - 'systemd': shell/linux/systemd.md
       - 'hostname': shell/linux/hostname.md
       - '图形文本界面切换': shell/linux/gui.md
+      - 'nginx': shell/linux/nginx.md
       - 'ssh服务':
         - 'sshd': shell/linux/ssh/sshd.md
         - 'ssh-keygen': shell/linux/ssh/ssh-keygen.md
