--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,12 +36,12 @@ jobs:
           mkdocs --version
           pip3 install mkdocs-material
           cd ..
-          git clone https://github.com/zhoukaisspu/zhoukaisspu.github.io.git
+          git clone https://github.com/zhoukaidev/zhoukaidev.github.io.git
           git config --global user.name "Kai.zhou"
           git config --global user.email "zhoukaisspu@163.com"
-          cd zhoukaisspu.github.io
+          cd zhoukaidev.github.io
           git remote rm origin
-          git remote add origin https://zhoukaisspu:${{ secrets.DEPLOYTOKEN }}@github.com/zhoukaisspu/zhoukaisspu.github.io.git
+          git remote add origin https://zhoukaidev:${{ secrets.DEPLOYTOKEN }}@github.com/zhoukaidev/zhoukaidev.github.io.git
           mkdocs gh-deploy --config-file ../ks_blog/mkdocs.yml --remote-branch master
 
       # Runs a set of commands using the runners shell
