--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@ site_name: Kai.Zhou's 知识库
 
 # Set the name of author. This will add a meta data tag to the generated HTML header
 site_author: Kai.Zhou
-repo_url: https://github.com/zhoukaisspu/ks_blog
-copyright: 'Copyright &copy; 2019 - 2022 Kai.Zhou'
+repo_url: https://github.com/zhoukaidev/ks_blog
+copyright: 'Copyright &copy; 2019 - 2024 Kai.Zhou'
 theme:
   language: 'zh'
   name: 'material'
