--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,6 @@ jobs:
           cd zhoukaidev.github.io
           git remote rm origin
           git remote add origin https://zhoukaidev:${{ secrets.DEPLOYTOKEN }}@github.com/zhoukaidev/zhoukaidev.github.io.git
-      - name Deploy github.io pages
+      - name: Deploy github.io pages
         run: |
           mkdocs gh-deploy --config-file ../ks_blog/mkdocs.yml --remote-branch master
