--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -137,6 +137,7 @@ nav:
     - '简介': algorithms/readme.md
   - 'go':
     - '简介': go/README.md
+    - '并发编程简述': go/concurrency.md
   - '数学基础':
     - '简介': math/first.md
   - 'AI':
