--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -135,7 +135,7 @@ nav:
     - 'Log管理': docker/logger.md
   - '数据结构与算法':
     - '简介': algorithms/readme.md
-  - 'go':
+  - 'Golang':
     - '简介': go/README.md
     - '并发编程简述': go/concurrency.md
   - '数学基础':
