--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,47 +78,47 @@ nav:
     - '2.5: 类型转换': swift/type_casting.md
   - 'linux':
     - 'linux':
-      - 'apt使用': shell/linux/apt.md
-      - '用户管理': shell/linux/user.md
-      - '网络接口': shell/linux/networkInterface.md
-      - 'Linux指令': shell/linux/command.md
-      - 'sudo vs su': shell/linux/sudo.su.md
-      - 'Linux工具': shell/linux/tools.md
-      - 'ext2文件系统': shell/linux/filesystem.md
-      - '硬/符号链接': shell/linux/hard_softlink.md
-      - 'FHS': shell/linux/fhs.md
-      - 'C编译流程': shell/linux/c_compilation.md
-      - 'systemd': shell/linux/systemd.md
-      - 'hostname': shell/linux/hostname.md
-      - '图形文本界面切换': shell/linux/gui.md
-      - 'nginx': shell/linux/nginx.md
+      - 'apt使用': linux/linux/apt.md
+      - '用户管理': linux/linux/user.md
+      - '网络接口': linux/linux/networkInterface.md
+      - 'Linux指令': linux/linux/command.md
+      - 'sudo vs su': linux/linux/sudo.su.md
+      - 'Linux工具': linux/linux/tools.md
+      - 'ext2文件系统': linux/linux/filesystem.md
+      - '硬/符号链接': linux/linux/hard_softlink.md
+      - 'FHS': linux/linux/fhs.md
+      - 'C编译流程': linux/linux/c_compilation.md
+      - 'systemd': linux/linux/systemd.md
+      - 'hostname': linux/linux/hostname.md
+      - '图形文本界面切换': linux/linux/gui.md
+      - 'nginx': linux/linux/nginx.md
       - 'ssh服务':
-        - 'sshd': shell/linux/ssh/sshd.md
-        - 'ssh-keygen': shell/linux/ssh/ssh-keygen.md
+        - 'sshd': linux/linux/ssh/sshd.md
+        - 'ssh-keygen': linux/linux/ssh/ssh-keygen.md
       - '实用工具':
-        - 'tmux': shell/linux/tools/tmux.md
-        - 'ssh': shell/linux/tools/ssh.md
-        - 'netstat': shell/linux/tools/netstat.md
+        - 'tmux': linux/linux/tools/tmux.md
+        - 'ssh': linux/linux/tools/ssh.md
+        - 'netstat': linux/linux/tools/netstat.md
       - '树莓派':
-        - 'vnc配置': shell/linux/raspberrypi/vnc.md
+        - 'vnc配置': linux/linux/raspberrypi/vnc.md
     - 'shell Script':
-      - 'shell script简介': shell/shellScript/home.md
-      - '变量': shell/shellScript/variable.md
-      - '条件判断': shell/shellScript/test.md
-      - 'shell替换': shell/shellScript/substitution.md
-      - '字符串操作': shell/shellScript/stringManipulation.md
-      - '文件测试': shell/shellScript/file_operator.md
-      - '函数定义': shell/shellScript/shell_function.md
-      - '数组': shell/shellScript/shellscript_array.md
-      - '重定向': shell/shellScript/redirection.md
-      - '调试': shell/shellScript/debug.md
-      - '常用代码片段': shell/shellScript/shCodeSnippet.md
+      - 'shell script简介': linux/shellScript/home.md
+      - '变量': linux/shellScript/variable.md
+      - '条件判断': linux/shellScript/test.md
+      - 'shell替换': linux/shellScript/substitution.md
+      - '字符串操作': linux/shellScript/stringManipulation.md
+      - '文件测试': linux/shellScript/file_operator.md
+      - '函数定义': linux/shellScript/shell_function.md
+      - '数组': linux/shellScript/shellscript_array.md
+      - '重定向': linux/shellScript/redirection.md
+      - '调试': linux/shellScript/debug.md
+      - '常用代码片段': linux/shellScript/shCodeSnippet.md
     - 'git':
-      - 'clone': shell/linux/tools/git/clone.md
-      - 'branch': shell/linux/tools/git/branch.md
-      - 'config': shell/linux/tools/git/config.md
-      - 'tag': shell/linux/tools/git/tag.md
-      - 'gitHubTips': shell/linux/tools/git/githubTips.md
+      - 'clone': linux/linux/tools/git/clone.md
+      - 'branch': linux/linux/tools/git/branch.md
+      - 'config': linux/linux/tools/git/config.md
+      - 'tag': linux/linux/tools/git/tag.md
+      - 'gitHubTips': linux/linux/tools/git/githubTips.md
   - '逆向工程':
     - '基础篇':
       - '逆向工程工具': reverseEngine/basicDevtool.md 
